@@ -2,6 +2,8 @@
 ChangeLog
  [ + added, - removed, * changed ]
  * 17Nov2014 Fixed time synchronization and running states in shmem traces 
+             Added configure parameters to specify the OpenSHMEM dependencies
+	     --with-openshmem-deps-libsdir and --with-openshmem-deps-libs
  + 14Nov2014 Added 'wrapgen' script to generate lists of wrappers/probes automatically
  * 03Nov2014 Fix capturing >1k function names through binutils
              Added instrumentation for:
